--- a/.envsample
+++ b/.envsample
@@ -6,3 +6,6 @@ MONGO_DB_NAME=iBlog
 CLOUDINARY_CLOUD_NAME=dg65hvb6r
 CLOUDINARY_API_KEY=373646217715977
 CLOUDINARY_SECRET=WUL8-RozVbSzZ6v1BvG7JS33h4E
+
+ACCESS_TOKEN_SECRET=secret
+ACCESS_TOKEN_EXPIRY=7d
